--- a/PopEngine.visualstudio/PopEngineApp.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngineApp.vcxproj.filters
@@ -12,8 +12,11 @@
     <Filter Include="UnitTest">
       <UniqueIdentifier>{7d707ff0-0d72-4505-9b31-7c2c36d9c688}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UnitTest\Xr">
+      <UniqueIdentifier>{3b84e26d-5d37-471c-810a-c2edd830b109}</UniqueIdentifier>
+    </Filter>
     <Filter Include="UnitTest\PopEngineCommon">
-      <UniqueIdentifier>{2a532ddf-1b20-4b5d-b2df-7dcaee528819}</UniqueIdentifier>
+      <UniqueIdentifier>{b351308d-e14d-473c-b666-ed363b0c1f2c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -22,6 +25,102 @@
     </None>
     <None Include="..\Source_App\PopEngineUnitTestApp.entitlements">
       <Filter>Source</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\LICENSE.md">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\MemCheckLoop.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\ParamsWindow.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopAruco.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopAssetServer.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopCamera.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopCinema4d.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopCollada.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopDll.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopFrameCounter.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopGuiRenderTimeline.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopGuiTimeline.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopH264.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopMath.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopMedia.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopMidi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopMp4.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopObj.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopPly.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopShaderCache.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopSvg.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopTexture.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebAudioApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebGuiApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebImageApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebOpenglApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebSocketApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopWebXrApi.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
+    <None Include="..\UnitTest\Xr\bootup.js">
+      <Filter>UnitTest\Xr</Filter>
+    </None>
+    <None Include="..\UnitTest\Xr\index.html">
+      <Filter>UnitTest\Xr</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -46,36 +145,8 @@
     <CopyFileToFolders Include="..\Build\PopEngine_Debug_Chakra_x64\PopEngine.dll">
       <Filter>Source</Filter>
     </CopyFileToFolders>
-    <CopyFileToFolders Include="..\UnitTest\Readme.md">
-      <Filter>UnitTest</Filter>
+    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\Readme.md">
+      <Filter>UnitTest\PopEngineCommon</Filter>
     </CopyFileToFolders>
-    <CopyFileToFolders Include="..\UnitTest\bootup.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\LICENSE.md" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\MemCheckLoop.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\ParamsWindow.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopAruco.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopCamera.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopCinema4d.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopCollada.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopDll.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopFrameCounter.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopH264.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopMath.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopMedia.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopMp4.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopObj.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopPly.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopShaderCache.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopSvg.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopTexture.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopWebApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopWebGuiApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopWebImageApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopWebOpenglApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopWebSocketApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PopWebXrApi.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\PromiseQueue.js" />
-    <CopyFileToFolders Include="..\UnitTest\PopEngineCommon\Readme.md" />
   </ItemGroup>
 </Project>
