--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -366,7 +366,7 @@
     <ClInclude Include="..\src\SoyOpenxr.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\Win32OpenglWindow.h">
+    <ClInclude Include="..\src\Win32OpenglContext.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
@@ -946,6 +946,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\SoyOpenxr.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Win32OpenglContext.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
