--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -63,6 +63,7 @@
     <ClInclude Include="..\src\SoyLib\src\SoyAssert.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyBase64.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyDebug.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyDirectx.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyFilesystem.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyFourcc.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyGraphics.h" />
@@ -229,6 +230,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\ChakraBind.cpp" />
     <ClCompile Include="..\src\Json11\json11.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyDirectx.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyFourcc.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyH264.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyPng.cpp" />
