Adding UWP specific projects

--- a/PopEngine.visualstudio/PopEngineApp_Uwp.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngineApp_Uwp.vcxproj.filters
@@ -41,5 +41,6 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="..\Source_Uwp\TemporaryKey.pfx" />
+    <None Include="$(OpenXRLoaderBinaryRoot)\bin\openxr_loader.dll" />
   </ItemGroup>
 </Project>
