--- a/PopEngine.visualstudio/PopEngine_Uwp.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine_Uwp.vcxproj.filters
@@ -277,5 +277,6 @@
     <None Include="..\src\SoyOpenglWindow.mm">
       <Filter>Source</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
